--- a/proba.html
+++ b/proba.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    neka ima so bilo <textarea name="" id="" cols="30" rows="10"></textarea>
+    neka ima so bilo <textarea name="zdravoJasSUmGoran" id="" cols="30" rows="10"></textarea>
+
+    <textarea name="asdasd" id="" cols="30" rows="10"></textarea>
 </body>
 </html>
